--- a/php/php-akamai-open-edgegrid-client/composer.json
+++ b/php/php-akamai-open-edgegrid-client/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "akamai-open/edgegrid-client",
     "description": "Implements the Akamai {OPEN} EdgeGrid Authentication specified by https://developer.akamai.com/introduction/Client_Auth.html",
-    "keywords": ["akamai", "open", "edgegrid"],
+    "keywords": ["akamai", "open", "edgegrid", "authentication", "client"],
     "type": "library",
     "license": "Apache-2.0",
-    "homepage": "https://github.com/akamai-open/edgegrid-auth-php",
+    "homepage": "https://github.com/akamai-open/AkamaiOPEN-edgegrid-php",
     "authors": [
         {
             "name": "Davey Shafik",
@@ -13,18 +13,18 @@
     ],
     "require": {
         "php": ">=5.5",
+        "akamai-open/edgegrid-auth": "^0.6.0",
         "guzzlehttp/guzzle": "~6.0",
         "psr/log": "^1.0",
         "monolog/monolog": "^1.15",
-        "League/CLImate": "~3.2"
+        "league/climate": "~3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7",
-        "theseer/phpdox": "~0.8",
-        "phploc/phploc": "^2.1",
         "squizlabs/php_codesniffer": "^2.3",
         "friendsofphp/php-cs-fixer": "^1.9",
-        "kherge/box": "^2.5"
+        "kherge/box": "^2.5",
+        "apigen/apigen": "^4.1"
     },
     "autoload": {
         "psr-4": {
@@ -34,9 +34,14 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Akamai\\Open\\EdgeGrid\\Tests\\": "tests",
+            "Akamai\\Open\\EdgeGrid\\Tests\\": ["tests", "vendor/akamai-open/edgegrid-auth/tests"],
             "GuzzleHttp\\Tests\\": "vendor/guzzlehttp/guzzle/tests",
             "Monolog\\": "tests/Monolog"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "5.5"
         }
     }
 }
