--- a/php/php-cs-fixer/composer.json
+++ b/php/php-cs-fixer/composer.json
@@ -18,13 +18,15 @@
         "ext-tokenizer": "*",
         "symfony/console": "^2.3 || ^3.0",
         "symfony/event-dispatcher": "^2.1 || ^3.0",
-        "symfony/filesystem": "^2.1 || ^3.0",
-        "symfony/finder": "^2.1 || ^3.0",
+        "symfony/filesystem": "^2.4 || ^3.0",
+        "symfony/finder": "^2.2 || ^3.0",
+        "symfony/polyfill-php54": "^1.0",
         "symfony/process": "^2.3 || ^3.0",
         "symfony/stopwatch": "^2.5 || ^3.0",
         "sebastian/diff": "^1.1"
     },
     "require-dev": {
+        "gecko-packages/gecko-php-unit": "^2.0",
         "phpunit/phpunit": "^4.5|^5",
         "satooshi/php-coveralls": "^1.0"
     },
@@ -32,7 +34,15 @@
         "hhvm": "<3.9"
     },
     "autoload": {
-        "psr-4": { "Symfony\\CS\\": "Symfony/CS/" }
+        "psr-4": { "PhpCsFixer\\": "src/" }
     },
-    "bin": ["php-cs-fixer"]
+    "autoload-dev": {
+        "psr-4": { "PhpCsFixer\\Tests\\": "tests/" }
+    },
+    "bin": ["php-cs-fixer"],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0-dev"
+        }
+    }
 }
