--- a/php/phpspec/php-phpspec/composer.json
+++ b/php/phpspec/php-phpspec/composer.json
@@ -25,7 +25,7 @@
         "php":                      "^5.6 || ^7.0",
         "phpspec/prophecy":         "^1.5",
         "phpspec/php-diff":         "^1.0.0",
-        "sebastian/exporter":       "^1.0",
+        "sebastian/exporter":       "^1.0 || ^2.0",
         "symfony/console":          "^2.7 || ^3.0",
         "symfony/event-dispatcher": "^2.7 || ^3.0",
         "symfony/process":          "^2.7 || ^3.0",
