--- a/php/php-mongodb/composer.json
+++ b/php/php-mongodb/composer.json
@@ -11,7 +11,10 @@
     ],
     "require": {
         "php": ">=5.4",
-        "ext-mongodb": "^1.1.0"
+        "ext-mongodb": "^1.2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
         "psr-4": { "MongoDB\\": "src/" },
@@ -19,5 +22,10 @@
     },
     "autoload-dev": {
         "psr-4": { "MongoDB\\Tests\\": "tests/" }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.1.x-dev"
+        }
     }
 }
