--- a/phan/composer.json
+++ b/phan/composer.json
@@ -19,7 +19,7 @@
         "symfony/console": "~2.3|~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5",
+        "phpunit/phpunit": "5.4.8",
         "phpdocumentor/phpdocumentor": "dev-master",
         "squizlabs/php_codesniffer": "^2.5"
     },
