--- a/php/zend/php-zendframework-zend-expressive-fastroute/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-fastroute/composer.json
@@ -13,8 +13,8 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1-dev",
-            "dev-develop": "1.2-dev"
+            "dev-master": "1.2-dev",
+            "dev-develop": "1.3-dev"
         }
     },
     "require": {
@@ -25,7 +25,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7",
-        "squizlabs/php_codesniffer": "^2.3"
+        "zendframework/zend-coding-standard": "~1.0.0"
     },
     "autoload": {
       "psr-4": {
