--- a/php/zend/php-zendframework-zend-expressive-router/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-router/composer.json
@@ -12,17 +12,19 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2-dev",
-            "dev-develop": "1.3-dev"
+            "dev-master": "1.3.x-dev",
+            "dev-develop": "2.0.x-dev"
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
-        "psr/http-message": "^1.0"
+        "php": "^5.6 || ^7.0",
+        "psr/http-message": "^1.0",
+        "fig/http-message-util": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7",
-        "squizlabs/php_codesniffer": "^2.3"
+        "phpunit/phpunit": "^4.7 || ^5.6",
+        "zendframework/zend-coding-standard": "~1.0.0",
+        "malukenho/docheader": "^0.1.5"
     },
     "autoload": {
       "psr-4": {
@@ -35,18 +37,20 @@
       }
     },
     "suggest": {
-        "zendframework/zend-expressive-aurarouter": "^0.1 to use the Aura.Router routing adapter",
-        "zendframework/zend-expressive-fastroute": "^0.1 to use the FastRoute routing adapter",
-        "zendframework/zend-expressive-zendrouter": "^0.1 to use the zend-mvc routing adapter"
+        "zendframework/zend-expressive-aurarouter": "^1.0 to use the Aura.Router routing adapter",
+        "zendframework/zend-expressive-fastroute": "^1.2 to use the FastRoute routing adapter",
+        "zendframework/zend-expressive-zendrouter": "^1.2 to use the zend-router routing adapter"
     },
     "scripts": {
         "check": [
             "@cs",
+            "@license-check",
             "@test"
         ],
-        "coveralls": "coveralls",
+        "coveralls": "coveralls -v",
         "cs": "phpcs",
         "cs-fix": "phpcbf",
+        "license-check": "docheader check src/ test/",
         "test": "phpunit",
         "test-coverage": "phpunit --coverage-clover clover.xml"
     }
