--- a/php/zend/php-aura-di/composer.json
+++ b/php/zend/php-aura-di/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aura/di",
     "type": "library",
-    "description": "Provides a dependency injection container system with native support for constructor- and setter-based injection, lazy-loading of services, and inheritable configuration of setters and constructor params.",
+    "description": "A serializable dependency injection container with constructor and setter injection, interface and trait awareness, configuration inheritance, and much more.",
     "keywords": [
         "container",
         "dependency injection",
@@ -10,7 +10,7 @@
         "dependency injection container"
     ],
     "homepage": "https://github.com/auraphp/Aura.Di",
-    "license": "BSD-2-Clause",
+    "license": "MIT",
     "authors": [
         {
             "name": "Aura.Di Contributors",
@@ -18,21 +18,24 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.5.0",
+        "container-interop/container-interop": "~1.0"
     },
     "autoload": {
         "psr-4": {
             "Aura\\Di\\": "src/"
         }
     },
-    "extra": {
-        "aura": {
-            "type": "library"
-        }
+    "require-dev": {
+        "mouf/picotainer": "~1.0",
+        "acclimate/container": "~1.0"
     },
     "autoload-dev": {
         "psr-4": {
             "Aura\\Di\\": "tests/"
         }
+    },
+    "provide": {
+        "container-interop/container-interop-implementation": "^1.0"
     }
 }
