--- a/php/zend/php-zendframework-zend-expressive-fastroute/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-fastroute/composer.json
@@ -13,19 +13,21 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2-dev",
-            "dev-develop": "1.3-dev"
+            "dev-master": "1.3-dev",
+            "dev-develop": "1.4-dev"
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
+        "php": "^5.6 || ^7.0",
         "nikic/fast-route": "^1.0.0",
         "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-router": "^1.0"
+        "zendframework/zend-expressive-router": "^1.3.2",
+        "fig/http-message-util": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7",
-        "zendframework/zend-coding-standard": "~1.0.0"
+        "phpunit/phpunit": "^4.7 || ^5.6",
+        "zendframework/zend-coding-standard": "~1.0.0",
+        "malukenho/docheader": "^0.1.5"
     },
     "autoload": {
       "psr-4": {
@@ -39,12 +41,14 @@
     },
     "scripts": {
         "check": [
-            "@cs",
+            "@cs-check",
+            "@license-check",
             "@test"
         ],
         "coveralls": "coveralls",
-        "cs": "phpcs",
+        "cs-check": "phpcs",
         "cs-fix": "phpcbf",
+        "license-check": "docheader check src/ test/",
         "test": "phpunit",
         "test-coverage": "phpunit --coverage-clover clover.xml"
     }
