--- a/php/zend/php-zendframework-zend-expressive-zendrouter/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-zendrouter/composer.json
@@ -13,20 +13,22 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2-dev",
-            "dev-develop": "1.3-dev"
+            "dev-master": "1.3-dev",
+            "dev-develop": "1.4-dev"
         }
     },
     "require": {
         "php": "^5.6 || ^7.0",
         "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-router": "^1.2",
+        "zendframework/zend-expressive-router": "^1.3.2",
         "zendframework/zend-router": "^3.0",
-        "zendframework/zend-psr7bridge": "^0.2.2"
+        "zendframework/zend-psr7bridge": "^0.2.2",
+        "fig/http-message-util": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "^2.6.2"
+        "phpunit/phpunit": "^4.8 || ^5.6",
+        "zendframework/zend-coding-standard": "~1.0.0",
+        "malukenho/docheader": "^0.1.5"
     },
     "autoload": {
       "psr-4": {
@@ -40,11 +42,13 @@
     },
     "scripts": {
         "check": [
-            "@cs",
+            "@license-check",
+            "@cs-check",
             "@test"
         ],
-        "cs": "phpcs",
+        "cs-check": "phpcs",
         "cs-fix": "phpcbf",
+        "license-check": "docheader check src/ test/",
         "test": "phpunit"
     }
 }
