--- a/php/zend/php-zendframework-zend-mvc-console/composer.json
+++ b/php/zend/php-zendframework-zend-mvc-console/composer.json
@@ -14,7 +14,7 @@
         "zendframework/zend-console": "^2.6",
         "zendframework/zend-eventmanager": "^2.6.2 || ^3.0",
         "zendframework/zend-modulemanager": "^2.7.1",
-        "zendframework/zend-mvc": "^3.0.0-dev || ^3.0",
+        "zendframework/zend-mvc": "^3.0.3",
         "zendframework/zend-router": "^3.0",
         "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
         "zendframework/zend-stdlib": "^2.7.5 || ^3.0",
