--- a/php/zend/php-zendframework-zend-expressive-twigrenderer/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-twigrenderer/composer.json
@@ -13,20 +13,22 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1-dev",
-            "dev-develop": "1.2-dev"
+            "dev-master": "1.2-dev",
+            "dev-develop": "1.3-dev"
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
+        "php": "^5.6 || ^7.0",
         "container-interop/container-interop": "^1.1",
-        "twig/twig": "^1.19",
-        "zendframework/zend-expressive-helpers": "^1.1 || ^2.0",
-        "zendframework/zend-expressive-template": "^1.0"
+        "twig/twig": "^1.26",
+        "zendframework/zend-expressive-helpers": "^1.1 || ^2.0 || ^3.0",
+        "zendframework/zend-expressive-router": "^1.3.2 || ^3.0",
+        "zendframework/zend-expressive-template": "^1.0.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7",
-        "squizlabs/php_codesniffer": "^2.3"
+        "phpunit/phpunit": "^5.7",
+        "zendframework/zend-coding-standard": "~1.0.0",
+        "malukenho/docheader": "^0.1.5"
     },
     "autoload": {
       "psr-4": {
@@ -45,11 +47,13 @@
     },
     "scripts": {
         "check": [
+            "@license-check",
             "@cs",
             "@test"
         ],
         "cs": "phpcs",
         "cs-fix": "phpcbf",
+        "license-check": "docheader check src/ test/",
         "test": "phpunit"
     }
 }
