--- a/php/php-consolidation-output-formatters/composer.json
+++ b/php/php-consolidation-output-formatters/composer.json
@@ -26,9 +26,11 @@
     "require-dev": {
         "phpunit/phpunit": "4.*",
         "satooshi/php-coveralls": "^1.0",
-        "squizlabs/php_codesniffer": "2.*"
+        "squizlabs/php_codesniffer": "2.*",
+        "victorjonsson/markdowndocs": "^1.3"
     },
     "scripts": {
+        "api": "phpdoc-md generate src > docs/api.md",
         "cs": "phpcs --standard=PSR2 -n src",
         "cbf": "phpcbf --standard=PSR2 -n src",
         "test": "phpunit --colors=always"
