--- a/php/sabredav/php-sabre-dav/composer.json
+++ b/php/sabredav/php-sabre-dav/composer.json
@@ -14,10 +14,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4.1",
-        "sabre/vobject": "^3.3.4",
-        "sabre/event" : "^2.0.0",
-        "sabre/http" : "^3.0.0",
+        "php": ">=5.5.0",
+        "sabre/vobject": "^4.1.0",
+        "sabre/event" : ">=2.0.0, <4.0.0",
+        "sabre/xml"  : "^1.4.0",
+        "sabre/http" : "^4.2.1",
+        "sabre/uri" : "^1.0.1",
         "ext-dom": "*",
         "ext-pcre": "*",
         "ext-spl": "*",
@@ -26,12 +28,14 @@
         "ext-ctype" : "*",
         "ext-date" : "*",
         "ext-iconv" : "*",
-        "ext-libxml" : "*"
+        "lib-libxml" : ">=2.7.0",
+        "psr/log": "^1.0"
     },
     "require-dev" : {
-        "phpunit/phpunit" : "~4.2",
+        "phpunit/phpunit" : "> 4.8, <=6.0.0",
         "evert/phpdoc-md" : "~0.1.0",
-        "squizlabs/php_codesniffer": "~1.5.3"
+        "sabre/cs"        : "~0.0.5",
+        "monolog/monolog": "^1.18"
     },
     "suggest" : {
         "ext-curl" : "*",
@@ -55,5 +59,10 @@
     ],
     "config" : {
         "bin-dir" : "./bin"
+    },
+    "extra" : {
+        "branch-alias": {
+            "dev-master": "3.1.0-dev"
+        }
     }
 }
