--- a/tools/mock/el7x71.cfg
+++ b/tools/mock/el7x71.cfg
@@ -1,6 +1,6 @@
 config_opts['root'] = 'el7x'
 config_opts['target_arch'] = 'x86_64'
-#config_opts['chroot_setup_cmd'] = 'install @buildsys-build devtoolset-6-toolchain'
+config_opts['chroot_setup_cmd'] = 'install @buildsys-build devtoolset-6-toolchain'
 config_opts['chroot_setup_cmd'] = 'install @buildsys-build'
 config_opts['dist'] = 'el7'  # only useful for --resultdir variable subst
 
@@ -25,9 +25,9 @@ config_opts['macros']['%rhel']="7"
 config_opts['macros']['%_with_ibase']="1"
 config_opts['macros']['%_with_oci8']="1"
 config_opts['macros']['%runselftest']="1"
-#config_opts['macros']['%dtsversion']="6"
-#config_opts['macros']['%dtsenable']="source /opt/rh/devtoolset-6/enable"
-#config_opts['macros']['%dtsprefix']="devtoolset-6-"
+config_opts['macros']['%dtsversion']="6"
+config_opts['macros']['%dtsenable']="source /opt/rh/devtoolset-6/enable"
+config_opts['macros']['%dtsprefix']="devtoolset-6-"
 
 config_opts['yum.conf'] = """
 [main]
