--- a/tools/mock/el7xscl54.cfg
+++ b/tools/mock/el7xscl54.cfg
@@ -1,6 +1,6 @@
 config_opts['root'] = 'scl54el7x'
 config_opts['target_arch'] = 'x86_64'
-config_opts['chroot_setup_cmd'] = 'install @buildsys-build scl-utils-build php54-build'
+config_opts['chroot_setup_cmd'] = 'install @buildsys-build scl-utils-build php54-build devtoolset-6-toolchain'
 config_opts['dist'] = 'el7'  # only useful for --resultdir variable subst
 
 config_opts['plugin_conf']['ccache_enable'] = True
